fix: Resolve the popular problem when 100vh doesn’t fit the mobile browser screen

--- a/apps/web/src/styles/index.less
+++ b/apps/web/src/styles/index.less
@@ -22,6 +22,7 @@ html {
 .@{prefix}-layout {
     display: flex;
     height: 100vh;
+    height: 100dvh;
     min-height: 0;
 
     &-left {
